// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders borderless button 1`] = `
.c0 {
  border: 0;
  box-shadow: none;
  border-radius: 4px;
  background: transparent;
  color: #1785FB;
  cursor: pointer;
  padding: 6px 12px;
  font: 500 12px/20px 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c0:hover {
  background: #f9fcff;
}

.c0:focus {
  background: #e0eefe;
  outline: none;
}

.c0:disabled {
  opacity: 0.24;
  cursor: not-allowed;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: transparent;
  color: #1785FB;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`render renders secondary button 1`] = `
.c0 {
  border: 1px solid #1785FB;
  box-shadow: none;
  border-radius: 4px;
  background: transparent;
  color: #1785FB;
  cursor: pointer;
  padding: 6px 12px;
  font: 500 12px/20px 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c0:hover {
  background: #f9fcff;
}

.c0:focus {
  background: #e0eefe;
  outline: none;
}

.c0:disabled {
  opacity: 0.24;
  cursor: not-allowed;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: transparent;
  color: #1785FB;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`render renders with large param 1`] = `
.c0 {
  border: 0;
  box-shadow: none;
  border-radius: 4px;
  background: #1785FB;
  color: #fff;
  cursor: pointer;
  padding: 8px 16px;
  font: 500 16px/24px 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c0:hover {
  background: #035dbd;
}

.c0:focus {
  background: #034995;
  outline: none;
}

.c0:disabled {
  opacity: 0.24;
  cursor: not-allowed;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: #1785FB;
  color: #fff;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`render renders with small param 1`] = `
.c0 {
  border: 0;
  box-shadow: none;
  border-radius: 4px;
  background: #1785FB;
  color: #fff;
  cursor: pointer;
  padding: 6px 8px;
  font: 400 10px/12px 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c0:hover {
  background: #035dbd;
}

.c0:focus {
  background: #034995;
  outline: none;
}

.c0:disabled {
  opacity: 0.24;
  cursor: not-allowed;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: #1785FB;
  color: #fff;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  border: 0;
  box-shadow: none;
  border-radius: 4px;
  background: #1785FB;
  color: #fff;
  cursor: pointer;
  padding: 6px 12px;
  font: 500 12px/20px 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c0:hover {
  background: #035dbd;
}

.c0:focus {
  background: #034995;
  outline: none;
}

.c0:disabled {
  opacity: 0.24;
  cursor: not-allowed;
}

.c0:disabled:hover,
.c0:disabled:focus {
  background: #1785FB;
  color: #fff;
}

.c0 svg {
  fill: currentColor;
}

<button
  className="c0"
>
  Button
</button>
`;
